minor tweak to fix jumping button

--- a/sites/all/themes/idmod_zen/css/custom.css
+++ b/sites/all/themes/idmod_zen/css/custom.css
@@ -1952,7 +1952,7 @@ p.sub-team-name {
 
 div#button1 {
 	margin-top: 45px;
-	margin-left: 20px;
+	margin-left: 15px;
 }
 
 div#button2 {
